# mailcopy

./: Cargo.toml  LICENSE  README.md
src/: arguments.rs  mail.rs  main.rs
