[package]
name = "mailcopy"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
hex = "0.4.3"
imap = "2.4.1"
indicatif = "0.17.8"
indicatif-log-bridge = "0.2.2"
log = "0.4.21"
native-tls = "0.2.12"
sha2 = "0.10.8"
zip = "2.1.1"
dotenv = "0.15.0"
chrono = "0.4.38"
tar = "0.4.40"
zstd = "0.13.1"
lazy_static = "1.4.0"
